[package]
name = "analog"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
log = "0.4"
fern = "0.7"
colored = "2.2"
humantime = "2.1.0"
parse_duration = "2.1.1"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-config = "1.57.0"
aws-sdk-cloudwatchlogs = "1.65.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.1.8", features = ["derive"] }
chrono = { version = "0.4", features = ["clock"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite"] }
